@@ -1,3 +1,8 @@
+2009-02-02  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* config/os/gnu-linux/os_defines.h: Remove superfluous
+	__NO_STRING_INLINES.
+
 2009-02-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/21_strings/c_strings/char/3.cc: New test.
